/*
 * Echoes React
 * Copyright (C) 2023-2024 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */

import { screen } from '@testing-library/react';
import { ComponentProps } from 'react';
import { render } from '~common/helpers/test-utils';
import { Display } from '../Display';

it.each([
  ['default', undefined],
  ['paragraph', 'p'],
  ['div', 'div'],
  ['span', 'span'],
] as Array<[_: string, as: ComponentProps<typeof Display>['as']]>)('renders as %s', (_, as) => {
  const text = 'hi there';
  setupDisplay({ as, children: text });

  expect(screen.getByText(text)).toMatchSnapshot();
});

function setupDisplay(
  { children, ...otherProps }: Partial<ComponentProps<typeof Display>> = {
    children: 'Text goes here',
  },
) {
  return render(<Display {...otherProps}>{children}</Display>);
}
